# fakeroot-ng

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README-Build-On-Ubuntu-12.0.4  README.packaging  README.porting  bootstrap  chroot.cpp  chroot.h  config.h.in  configure  configure.ac  credentials.cpp  daemon.cpp  daemon.h  exceptions.h  fakeroot-ng.man  file.cpp  file_lie.cpp  file_lie.h  log.cpp  log.h  main.cpp  parent.cpp  parent.h  process.cpp  process.h  ptrace.cpp  refcount.h  syscalls.h  unique_fd.h
arch/: Makefile.am  Makefile.in  platform.h
arch/linux/: Makefile.template.in  os.c  os.h
arch/linux/i386/: platform.c  platform_specific.h
arch/linux/powerpc/: Makefile.in  platform.c  platform_specific.h
arch/linux/x86_64/: platform.c  platform_specific.h
debian/: README.Debian  changelog  control  copyright  docs  postinst  prerm  rules  watch
tests/: Makefile.am  Makefile.in  calc_defaults.cpp  exercise.c  fbomb.cpp  getsiginfo.c  pwd.c  thread.c  wait_test.cpp
