noinst_PROGRAMS=fbomb wait_test exercise calc_defaults pwd getsiginfo thread

wait_test_SOURCES=wait_test.cpp
fbomb_SOURCES=fbomb.cpp
exercise_SOURCES=exercise.c
calc_defaults_SOURCES=calc_defaults.cpp
pwd_SOURCES=pwd.c
getsiginfo_SOURCES=getsiginfo.c
thread_SOURCES=thread.c
thread_LDFLAGS=-pthread
